# test_mnemonic

./: Cargo.toml  README.md
src/: main.rs
