[package]
name = "test_mnemonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmrs = { version = "0.15.0", features = [ "rpc", "dev", "bip32"] }
bip32 = { version = "0.5.1" }
serde = { version = "1.0.130" }
serde_json = { version = "1.0.68"}